enum CardColor{
    [   RED,
        SKYBLUE,
        PURPLE,
        GREEN
            ]
}
