enum CardSide {
    [FRONT ,BACK]

}
