package it.polimi.ingsw.model.card;

public enum Symbol {
    ANIMAL,
}
